--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fav.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>低階思維</title>
+    <link rel="icon" type="image/png" href="/fav.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="description" content="低階思維 YouTube 數據分析儀表板" />
+    <meta name="theme-color" content="#0a0a0c" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    <title>低階思維 | YouTube Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
